--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "ders-notlari-2020-guz",
+  "homepage": "https://turkaytunc.github.io/ders-notlari-2020-guz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react": "^16.9.55",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
