--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@types/react": "^16.9.55",
     "codecov": "^3.8.0",
     "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "sass": "^1.28.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
